# Human-Robot-Cooperation

./: .gitignore  README.md
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_arm_controller/: CMakeLists.txt  package.xml  velocity_interface_controller.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_arm_controller/include/velocity_interface_controller/: KalmanFilter.h  gravity_compensation.h  pinocchio_gravity_compensation.h  validate_velocity_interface_controller_parameters.hpp  velocity_interface_controller.hpp  visibility_control.h
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_arm_controller/src/: KalmanFilter.cpp  gravity_compensation.cpp  pinocchio_gravity_compensation.cpp  velocity_interface_controller.cpp  velocity_interface_controller.yaml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_arm_dynamics_models/: CMakeLists.txt  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_arm_dynamics_models/include/moying_mcr_arm_dynamics_models/: dynamics_models.h
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_arm_dynamics_models/test/: test_dynamics.cpp
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_description/: CMakeLists.txt  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_description/meshes/: Body.STL  Gripper_base.STL
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_description/meshes/chassis/: chassis_link.STL  left_wheel.STL  right_wheel.STL
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_description/meshes/humoyoid/: Base_pillar.stl  Body.stl  Head.stl  YF14_Head_base.stl
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_description/ros2_control/: moying_mcr.ros2_control.xacro
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_description/urdf/: body.urdf.xacro  d435.urdf.xacro  left_only.urdf  moying_mcr.urdf  moying_mcr.urdf.xacro  right_only.urdf
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_elfin/elfin_ethercat_driver_plant/: CMakeLists.txt  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_elfin/elfin_ethercat_driver_plant/src/: elfin_ethercat_driver.cpp  elfin_ethercat_io_client.cpp
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_gripper/serial/: CMakeLists.txt
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_hardware/: CMakeLists.txt  moying_mcr_hardware.xml  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_hardware/include/moying_mcr_hardware/: arm_ethercat_driver.hpp  arm_hardware_interface.hpp  visibility_control.h
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_hardware/src/: arm_ethercat_driver.cpp  arm_hardware_interface.cpp
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_hardware_zombie/: CMakeLists.txt  moying_mcr_hardware_zombie.xml  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_hardware_zombie/src/: arm_ethercat_driver.cpp  arm_hardware_interface.cpp
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_mujoco_hardware/: CMakeLists.txt  moying_mcr_mujoco_hardware.xml  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_mujoco_hardware/src/: moying_mcr_mujoco_hardware.cpp
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_mujoco_hardware/test/: test_ethercat_chassis_driver.cpp
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_mujoco_publisher/: CMakeLists.txt  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_mujoco_publisher/src/: moying_mcr_mujoco_tf.cpp
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_rq_fts_ros2_driver/robotiq_ft_sensor_hardware_zombie/: package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_wholebody_controller/: CMakeLists.txt  mmco_dual_controller.xml  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_wholebody_controller/src/: mmco_dual_controller.cpp  mmco_dual_controller.yaml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_wholebody_interface/: CMakeLists.txt  package.xml
moying_mcr_ws/src/moying_mcr_controller/moying_mcr_wholebody_interface/src/: factory_functions.cpp  mmco_dual_interface.cpp  mmco_dual_pinocchio_mapping.cpp  mmco_dual_precomputation.cpp  mmco_dual_wb_pinocchio_mapping.cpp
moying_mcr_ws/src/moying_mcr_controller/ros2-soem-3/: CMakeLists.txt  package.xml
pr2_ws/src/pr2_controller/baichuan_fieldbus_ethercat/: CMakeLists.txt  ReadMe.md  package.xml
pr2_ws/src/pr2_controller/baichuan_fieldbus_ethercat/SOEM/: .travis.yml  CMakeLists.txt
pr2_ws/src/pr2_controller/baichuan_fieldbus_ethercat/cmake/: soem-ros-extras.cmake.in
pr2_ws/src/pr2_controller/baichuan_fieldbus_ethercat/src/: ethercat_master.cpp
pr2_ws/src/pr2_controller/baichuan_fieldbus_ethercat/test/: baichuan_fieldbus_ethercat_master_test_node.cpp
pr2_ws/src/pr2_controller/pr2_arm_controller/: CMakeLists.txt  package.xml  pr2_arm_velocity_controller.xml
pr2_ws/src/pr2_controller/pr2_arm_controller/src/: pr2_arm_velocity_controller.cpp  pr2_arm_velocity_controller.yaml
pr2_ws/src/pr2_controller/pr2_elfin/elfin_ros_control/: CMakeLists.txt
pr2_ws/src/pr2_controller/pr2_mobile_controller/: CMakeLists.txt  package.xml  pr2_omni_controller.xml
pr2_ws/src/pr2_controller/pr2_mobile_controller/src/: pr2_omni_controller.cpp  pr2_omni_controller.yaml
pr2_ws/src/pr2_controller/pr2_mujoco_hardware/: CMakeLists.txt  package.xml  pr2_mujoco_hardware.xml
pr2_ws/src/pr2_controller/pr2_mujoco_hardware/src/: pr2_mujoco_hardware.cpp
pr2_ws/src/pr2_controller/pr2_rq_fts_ros2_driver/robotiq_ft_sensor_hardware_zombie/: CMakeLists.txt  robotiq_ft_sensor_hardware_zombie.xml
pr2_ws/src/pr2_controller/pr2_wholebody_controller/: CMakeLists.txt  package.xml  pr2_wholebody_controller.xml
pr2_ws/src/pr2_controller/pr2_wholebody_controller/src/: pr2_wholebody_controller.cpp  pr2_wholebody_controller.yaml
pr2_ws/src/pr2_controller/pr2_wholebody_interface/: CMakeLists.txt  package.xml
pr2_ws/src/pr2_controller/pr2_wholebody_interface/src/: factory_functions.cpp  wholebody_interface.cpp  wholebody_pinocchio_mapping.cpp  wholebody_precomputation.cpp  wholebody_wb_pinocchio_mapping.cpp
pr2_ws/src/pr2_controller/ros2-soem-2/: CMakeLists.txt
(+327 files in other folders)
