<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moying_mcr_arm_controller</name>
  <version>0.0.0</version>
  <description>Use pid to controller effort interface.</description>
  <maintainer email="wobudajianpan@gmail.com">Jianming Yao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>control_msgs</depend>

  <depend>controller_interface</depend>

  <depend>hardware_interface</depend>

  <depend>pinocchio</depend>

  <depend>moying_mcr_arm_dynamics_models</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <depend>realtime_tools</depend>

  <depend>std_srvs</depend>

  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
