<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moying_mcr_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wobudajianpan@qq.com">jk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>moying_chassis_description</depend>
  <depend>elfin_description</depend>
  <depend>robotiq_85_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
